edition = "2023";
package testgen;

import "confpb/v1/field.proto";

option go_package = ".;main";

option features.field_presence = IMPLICIT;

message Int32 {
  int32 normal = 1 [(confpb.v1.env) = "INT32"];
  int32 with_presence = 2 [(confpb.v1.env) = "INT32_WITH_PRESENCE", features.field_presence = EXPLICIT];
  repeated int32 list = 3 [(confpb.v1.env) = "INT32_LIST"];

  oneof oneof_test {
    int32 oneof_option_a = 4 [(confpb.v1.env) = "INT32_ONEOF_A"];
    int32 oneof_option_b = 5 [(confpb.v1.env) = "INT32_ONEOF_B"];
  }
}
